[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "input-tool"
version = "2.0.2"
description = "Tool which simplifies creating and testing inputs for programming contests."
license = "MIT"
authors = ["jablkoj (Ján Hozza)", "fezjo (Jozef Číž)"]
maintainers = []
readme = "README.md"
repository = "https://github.com/fezjo/input-tool/"
keywords = ["benchmark", "contests", "competitive-programming", "tool"]
classifiers = [
    "Environment :: Console",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark",
    "Typing :: Typed",
]
exclude = ["tests", ".git*"]

[tool.poetry.scripts]
input-sample = "input_tool.input_sample:main"
input-generator = "input_tool.input_generator:main"
input-tester = "input_tool.input_tester:main"
itool = "input_tool.itool:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
pyyaml = "^6.0.2"
argcomplete = "^3.5.0"
tqdm = "^4.66.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"
black = "^24.8.0"
mypy = "^1.11.2"
types-requests = "^2.32.0.20240712"
poethepoet = "^0.23.0"
types-pyyaml = "^6.0.12.20240808"
types-tqdm = "^4.66.0.20240417"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-black = "^0.3.12"
pytest-mypy = "^0.10.3"
pytest-sugar = "^1.0.0"
pytest-ruff = "^0.1.1"

[tool.poe.tasks]
black = "black ."
ruff = "ruff check --fix ."
mypy = "mypy ."
test = "pytest ."
lint = ["black", "ruff"]
typecheck.sequence = ["mypy"]
typecheck.ignore_fail = true
checkall = ["lint", "typecheck"]
testall = "pytest --black --ruff --mypy ."

[tool.pytest.ini_options]
cache_dir = ".cache/.pytest_cache"

[tool.mypy]
cache_dir = ".cache/.mypy_cache"

[tool.ruff]
cache-dir = ".cache/.ruff_cache"
lint.extend-select = ["I"]
extend-exclude = []
fix = true
