[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "input-tool"
version = "2.0.3"
description = "Tool which simplifies creating and testing inputs for programming contests."
license = "MIT"
authors = ["jablkoj (Ján Hozza)", "fezjo (Jozef Číž)"]
maintainers = []
readme = "README.md"
repository = "https://github.com/fezjo/input-tool/"
keywords = ["benchmark", "contests", "competitive-programming", "tool"]
classifiers = [
    "Environment :: Console",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark",
    "Typing :: Typed",
]
exclude = ["tests", ".git*"]

[tool.poetry.scripts]
input-sample = "input_tool.input_sample:main"
input-generator = "input_tool.input_generator:main"
input-tester = "input_tool.input_tester:main"
itool = "input_tool.itool:main"

[tool.poetry.dependencies]
python = "^3.9"
argcomplete = "^3.6.2"
pyyaml = "^6.0.2"
requests = "^2.32.3"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.15.0"
poethepoet = "^0.34.0"
ruff = "^0.11.7"
types-pyyaml = "^6.0.12.20250402"
types-requests = "^2.32.0.20250328"
types-tqdm = "^4.67.0.20250417"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-black = "^0.6.0"
pytest-mypy = "^1.0.1"
pytest-ruff = "^0.4.1"
pytest-sugar = "^1.0.0"

[tool.poe.tasks]
black = "black ."
mypy = "mypy ."
ruff = "ruff check --fix ."
test = "pytest ."
lint = ["black", "ruff"]
typecheck.sequence = ["mypy"]
typecheck.ignore_fail = true
checkall = ["lint", "typecheck"]
testall = "pytest --black --ruff --mypy ."

[tool.pytest.ini_options]
cache_dir = ".cache/.pytest_cache"

[tool.mypy]
cache_dir = ".cache/.mypy_cache"

[tool.ruff]
cache-dir = ".cache/.ruff_cache"
extend-exclude = []
fix = true
lint.extend-select = ["I"]
