[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "input-tool"
version = "2.0.3"
description = "Tool which simplifies creating and testing inputs for programming contests."
license = { text = "MIT" }
authors = [{ name = "jablkoj (Ján Hozza)" }, { name = "fezjo (Jozef Číž)" }]
readme = "README.md"
requires-python = ">=3.9,<4"
keywords = ["benchmark", "contests", "competitive-programming", "tool"]
classifiers = [
    "Environment :: Console",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark",
    "Typing :: Typed",
]
dependencies = [
    "argcomplete>=3.5.0,<4",
    "pyyaml>=6.0.2,<7",
    "requests>=2.32.3,<3",
    "tqdm>=4.66.5,<5",
]

[project.urls]
Repository = "https://github.com/fezjo/input-tool/"

[project.scripts]
input-sample = "input_tool.input_sample:main"
input-generator = "input_tool.input_generator:main"
input-tester = "input_tool.input_tester:main"
itool = "input_tool.itool:main"

[dependency-groups]
dev = [
    "black>=24.8.0,<26",
    "mypy>=1.11.2,<2",
    "ruff>=0.6.2,<0.12",
    "types-pyyaml>=6.0.12.20240808,<7",
    "types-requests>=2.32.0.20240712,<3",
    "types-tqdm>=4.66.0.20240417,<5",
]
test = [
    "pytest>=8.3.2,<9",
    "pytest-black>=0.3.12,<0.7",
    "pytest-mypy>=1.0.0,<2",
    "pytest-ruff>=0.1.1,<0.5",
    "pytest-sugar>=1.0.0,<2",
    "pytest-xdist>=3.6.1,<4",
]

[tool.hatch.build.targets.sdist]
exclude = ["tests", ".git*"]

[tool.pytest.ini_options]
cache_dir = ".cache/.pytest_cache"
addopts = "--dist=loadfile -n 4"
norecursedirs = ["tests/fixtures"]

[tool.mypy]
cache_dir = ".cache/.mypy_cache"
exclude = ["^tests/fixtures/"]

[tool.ruff]
cache-dir = ".cache/.ruff_cache"
extend-exclude = []
fix = true
lint.extend-select = ["I"]
